--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "name": "AdFriend",
     "version": "1.0",
     "description": "Replace ads with mootivational content and Manage  tasks",
-    "permissions": ["scripting", "storage"],
+    "permissions": ["scripting", "storage", "activeTab", "tabs"],
     "host_permissions": ["<all_urls>", "http://*/*", "https://*/*"],
     "background": {
         "service_worker": "background.js"
