--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,12 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "icons/icon16.png",
-            "48": "icons/icon48.png",
-            "128": "icons/icon128.png"
+            "16": "icons/128.png"
         }
     },
     "content_scripts": [
-        {
+        {   
+            "matches": ["<all_urls>"],
             "js": ["content.js"],
             "run_at": "document_end"
         }
